# anari-ospray

./: CMakeLists.txt  OSPRayDevice.cpp  OSPRayDevice.h  Object.cpp  README.md
.github/workflows/: ci.yml
array/: Array.cpp
device/: CMakeLists.txt  OSPRayDevice.cpp  OSPRayDevice.h  OSPRayDeviceDebugFactory.cpp  OSPRayDeviceQueries.cpp  enumCast.hpp  ospray_extensions.json  ospray_renderer_default.json
device/array/: Array.cpp  Array.h
device/renderer/: Renderer.cpp
device/scene/surface/geometry/: Quad.cpp
device/scene/volume/: TransferFunction1D.h  Volume.h
device/scene/volume/spatial_field/: SpatialField.cpp
example/: CMakeLists.txt  main.cpp
frame/: Frame.cpp  Frame.h
scene/: Group.cpp  Group.h  World.cpp
src/: CMakeLists.txt  OSPRayDevice.cpp  Object.h
src/array/: Array.h
src/code_gen/: ospray_device.json  ospray_renderer_ao.json  ospray_renderer_pathtracer.json  ospray_renderer_scivis.json
src/frame/: Frame.cpp  Frame.h
src/geometry/: Isosurface.h  Quad.cpp  Quad.h  Triangle.cpp  Triangle.h
src/material/: PBM.cpp  PBM.h
src/renderer/: AO.cpp  AO.h  Renderer.cpp
src/sampler/: Image1D.cpp  Image2D.cpp
src/scene/: Group.cpp  World.h
src/spatial_field/: AMRField.cpp  AMRField.h  SpatialField.cpp  SpatialField.h  StructuredRegularField.cpp  StructuredRegularField.h  UnstructuredField.cpp  UnstructuredField.h
src/surface/: Surface.h
src/volume/: TransferFunction1D.cpp  TransferFunction1D.h
